--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -22,3 +22,14 @@
       - net-tools
       - curl
       - git
+      - jq
+      - ca-certificates
+      - software-properties-common
+
+  - name: install sublime 3 with commandline
+    shell: |
+      wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
+      echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
+      sudo apt update
+      sudo apt install sublime-text
+
