--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -3,9 +3,13 @@
   hosts: all
   become: yes
 
+  vars_files:
+    - ./vars/user_vars.yml
+
 
   roles:
     - geerlingguy.docker
+    - gantsign.maven
 
   tasks:
 
@@ -29,13 +33,19 @@
       - jq
       - ca-certificates
       - software-properties-common
+      - openjdk-8-jdk
+
+
 
   - name: install sublime 3 with commandline
     shell: |
       wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
       echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
+      wget -O - https://dbeaver.io/debs/dbeaver.gpg.key | sudo apt-key add -
+      echo "deb https://dbeaver.io/debs/dbeaver-ce /" | sudo tee /etc/apt/sources.list.d/dbeaver.list
       sudo apt update
-      sudo apt install sublime-text
+      sudo apt install -y sublime-text
+      sudo apt install -y dbeaver-ce
 
   - name: Install snap items with option --classic
     snap:
@@ -45,4 +55,10 @@
 
     with_items:
       - intellij-idea-community
+
+  - name: Set env variables in .bashrc
+    lineinfile:
+      path: "{{ user_home }}/.bashrc"
+      line: export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+      insertafter: EOF
 
