--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -13,6 +13,9 @@
 
   tasks:
 
+  - include: apt-custom.yml url="https://download.sublimetext.com/sublimehq-pub.gpg" repo_details="deb https://download.sublimetext.com/ apt/stable/" custom_file_name="sublime-text"
+  - include: apt-custom.yml url="https://dbeaver.io/debs/dbeaver.gpg.key" repo_details="deb https://dbeaver.io/debs/dbeaver-ce /" custom_file_name="dbeaver"
+
   - apt_repository:
       repo: "{{ item }}"
       state: present
@@ -34,18 +37,11 @@
       - ca-certificates
       - software-properties-common
       - openjdk-8-jdk
+      - sublime-text
+      - dbeaver-ce
 
+  - include: cleanup.yml
 
-
-  - name: install sublime 3 with commandline
-    shell: |
-      wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
-      echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
-      wget -O - https://dbeaver.io/debs/dbeaver.gpg.key | sudo apt-key add -
-      echo "deb https://dbeaver.io/debs/dbeaver-ce /" | sudo tee /etc/apt/sources.list.d/dbeaver.list
-      sudo apt update
-      sudo apt install -y sublime-text
-      sudo apt install -y dbeaver-ce
 
   - name: Install snap items with option --classic
     snap:
