changes to playbook to modularize

--- a/devtop_ubuntu_1804/apt-custom.yml
+++ b/devtop_ubuntu_1804/apt-custom.yml
@@ -3,8 +3,4 @@
     url: "{{ url }}"
     state: present
 
-- apt_repository:
-    repo: "{{ repo_details }}"
-    state: present
-    filename: "{{ custom_file_name }}"
-    update_cache: yes
+- include: apt-repo.yml
