--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -15,12 +15,7 @@
 
   - include: apt-custom.yml url="https://download.sublimetext.com/sublimehq-pub.gpg" repo_details="deb https://download.sublimetext.com/ apt/stable/" custom_file_name="sublime-text"
   - include: apt-custom.yml url="https://dbeaver.io/debs/dbeaver.gpg.key" repo_details="deb https://dbeaver.io/debs/dbeaver-ce /" custom_file_name="dbeaver"
-
-  - apt_repository:
-      repo: "{{ item }}"
-      state: present
-    with_items:
-      - ppa:git-core/ppa
+  - include: apt-repo.yml repo_details="ppa:git-core/ppa" custom_file_name="git"
 
   - name: apt items setup
     apt:
