--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -12,6 +12,10 @@
     - gantsign.maven
 
   tasks:
+  
+  - name: Set timezone to Asia/Tokyo
+    timezone:
+      name: Europe/Amsterdam
 
   - include: apt-custom.yml url="https://download.sublimetext.com/sublimehq-pub.gpg" repo_details="deb https://download.sublimetext.com/ apt/stable/" custom_file_name="sublime-text"
   - include: apt-custom.yml url="https://dbeaver.io/debs/dbeaver.gpg.key" repo_details="deb https://dbeaver.io/debs/dbeaver-ce /" custom_file_name="dbeaver"
