checking git has issue still older version

--- a/devtop_ubuntu_1804/playbook.yml
+++ b/devtop_ubuntu_1804/playbook.yml
@@ -13,7 +13,7 @@
 
   tasks:
   
-  - name: Set timezone to Asia/Tokyo
+  - name: Set timezone to Europe/Amsterdam
     timezone:
       name: Europe/Amsterdam
 
